changed font widths

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
             @font-face {
                 font-family: 'Inconsolata';
                 font-weight: 900;
-                font-variation-settings: 'wdth' 140;
                 src: url(assets/Inconsolata-VariableFont_wdth\,wght.ttf);}
             body{font-family: 'Inconsolata'; margin: 0; width: 100vw; height: 100vh;
             display: flex; text-align: right; font-size: min(5vh, 5vw)}
@@ -20,7 +19,7 @@
                 border-color:black}
         </style></head>
     <body><main>
-        <h1>NOWHERE IN<br>PARTICULAR</h1><div style="margin-top: 1em"><h1><a href="corridor">enter ↘</a></span></h1></div>
+        <h1 style="font-variation-settings: 'wdth' 140;">NOWHERE IN<br>PARTICULAR</h1><div style="margin-top: 1em"><h1><a href="corridor" style="font-variation-settings: 'wdth' 110;">enter ↘</a></span></h1></div>
     </main>
     </body>
 </html>
