--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             main{margin: auto; width: fit-content}
             h1{margin: 0}
             ::selection{background-color: black; color: white}
-            a{color: black; transition: all .5s cubic-bezier(0,1,0,1);
+            a{color: black; transition: all .5s cubic-bezier(0,1,0,1); font-weight: 400;
                 text-decoration: none; border: solid .075em; padding: .125em .25em;}
             a:hover{background-color: black; color: white; text-decoration: black;
-                border-color:black}
+                border-color:black; font-weight: 800}
         </style></head>
     <body><main>
-        <h1 style="font-variation-settings: 'wdth' 140;">NOWHERE IN<br>PARTICULAR</h1><div style="margin-top: 1em"><h1><a href="corridor" style="font-variation-settings: 'wdth' 110;">enter ↘</a></span></h1></div>
+        <h1 style="font-variation-settings: 'wdth' 140; font-weight: 900">NOWHERE IN<br>PARTICULAR</h1><div style="margin-top: 1em"><h1><a href="corridor" style="font-variation-settings: 'wdth' 110;">enter ↘</a></span></h1></div>
     </main>
     </body>
 </html>
