--- a/corridor.html
+++ b/corridor.html
@@ -16,8 +16,9 @@
             ::selection{background-color: white; color: black}
             a{color: white; transition: all .5s cubic-bezier(0,1,0,1); 
                 font-weight: 900}
-            nav a{text-decoration: none;
+            nav a{text-decoration: none; font-weight: 400;
                 border: solid 1px black; padding: 8px 12px}
+            nav a:hover{font-weight:900}
 
             nav h2{display: inline-block; width: 100%; margin: 12px 0}
 
