--- a/basement/index.html
+++ b/basement/index.html
@@ -22,8 +22,9 @@
             #fonts:hover{background-color: black; color: deeppink}
 
             nav{margin: 24px 0}
-            nav a{text-decoration: none; display: inline-block;
+            nav a{text-decoration: none; display: inline-block; font-weight: 500;
                 border: solid 1px aliceblue; padding: 8px 12px}
+            nav a:hover{font-weight:900}
             nav h2{display: inline-block; width: 100%; margin: 12px 0}
         </style></head>
     <body><main>
