--- a/basement/fonts/index.html
+++ b/basement/fonts/index.html
@@ -20,9 +20,10 @@
             #fonts-by-type a:hover{background-color: white; 
                 color: black; border-color: white}
 
-            #monospaced a{background-image: url(monospaced/button.png);
-                background-position: right; background-repeat: no-repeat;
+            #fonts-by-type a{background-position: right; background-repeat: no-repeat;
                 background-size: contain;}
+            #monospaced a{background-image: url(monospaced/button.png);}
+            #sans a{background-image: url(sans/button.png);}
 
             #font-sites p{margin: 4px 12px 12px}
             
@@ -64,7 +65,7 @@
             </details>
             
             <nav id="fonts-by-type">
-                <h2 id="monospaced"><a href="monospaced">monospaced</a></h2>
+                <h2 id="monospaced"><a href="monospaced">monospaced</a></h2><h2 id="sans"><a href="sans">sans</a></h2>
             </nav>
 
 
