--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -313,7 +313,7 @@
             <ul>
                 <li><a href="pages/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit. (Also i keep having to change this page every time i change the design of the site.) (and also because i now understand that <b>difference isn't as important as <s>equality</s> equity</b>.) (both are equally important tbh)</li>
                 <li><a href="pages/blips">blips</a>: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</li>
-                <li><a href="pages/weather">weather</a>: my first thing with css, that uses wttr.in to get the weather where you tell it. It doesnt store your location anywhere, as you can tell by you having to tell it the location every time you open it.</li>
+                <li><a href="pages/weather">weather</a>: my first thing with javascript, that uses wttr.in to get the weather where you tell it. It doesnt store your location anywhere, as you can tell by you having to tell it the location every time you open it.</li>
                 <li><a href="pages/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>. Also the first time i used Work Sans!</li>
                 <li><a href="pages/lipu-tenpo/">lipu tenpo</a>: a webzine version of lipu tenpo, partially driven by... anger at its new design. Also mainly just to flex my layouting muscles.</li>
                 <li><a href="pages/latex_test.html">latex test</a>: a test for MathJax, a thing that lets you put LaTEX formulas in html! This specifically is some stuff i learned in uni about electron energy levels.</li>
