--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -81,11 +81,11 @@
                 Also i probably missed some names between 26/4 and 6/5/2024 oops<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 149 changes</li>
+                    <li><b>kulupu ko:</b> 150 changes</li>
                     <li><b>the motan:</b> 89 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 44 changes</li>
-                    <li><b>jan Seli:</b> 27 changes</li>
+                    <li><b>jan Seli:</b> 28 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>waso Atu:</b> 3 changes</li>
@@ -94,6 +94,8 @@
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>2/8:<b> rest here, weary traveler </b><span class="name">kulupu ko</span></li><br>
+            <li>2/8:<b> reimann zeta function </b><span class="name">jan Seli</span></li><br>
             <li>22/7:<b> mæ ænteɪ pai ijoʊ ænteɪ </b><span class="name">kulupu ko</span></li><br>
             <li>21/7:<b> мд дите рі ю дите </b><span class="name">waso Atu</span></li><br>
             <li>21/7:<b> ma ante </b><span class="name">kulupu ko</span></li><br>
