oops accidentally made parallax images HUGE

--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -78,11 +78,12 @@
             <p style='margin-top: 5px'>These are only the names present in the audit log; there might be other names before june 4th.<br>
                 Also this is accurate to as long as i can keep updating this and/or discord doesn't implode and mante still stands<br>
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br>
-                Also i probably missed some names between 26/4 and 6/5/2024 oops<br><br>
+                Also i probably missed some names between 26/4 and 6/5/2024 oops<br>
+                Also also the dates are based on my timezone, UTC -3<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 150 changes</li>
-                    <li><b>the motan:</b> 89 changes</li>
+                    <li><b>the motan:</b> 90 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 44 changes</li>
                     <li><b>jan Seli:</b> 28 changes</li>
@@ -94,6 +95,7 @@
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>2/8:<b> rest here, wearing traveler only </b><span class="name">the motan</span></li><br>
             <li>2/8:<b> rest here, weary traveler </b><span class="name">kulupu ko</span></li><br>
             <li>2/8:<b> reimann zeta function </b><span class="name">jan Seli</span></li><br>
             <li>22/7:<b> mæ ænteɪ pai ijoʊ ænteɪ </b><span class="name">kulupu ko</span></li><br>
