--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -83,7 +83,7 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 150 changes</li>
-                    <li><b>the motan:</b> 90 changes</li>
+                    <li><b>the motan:</b> 91 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 44 changes</li>
                     <li><b>jan Seli:</b> 28 changes</li>
@@ -95,6 +95,7 @@
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>3/8:<b> mante pijante </b><span class="name">the motan</span></li><br>
             <li>2/8:<b> rest here, wearing traveler only </b><span class="name">the motan</span></li><br>
             <li>2/8:<b> rest here, weary traveler </b><span class="name">kulupu ko</span></li><br>
             <li>2/8:<b> reimann zeta function </b><span class="name">jan Seli</span></li><br>
