added responsive button

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -99,6 +99,7 @@
             <img src="best_viewed_with_eyes.gif" alt="best viewed with eyes">
             <img src="firefox4.gif" alt="tested on Firefox">
             <img src="hand-coded.gif" alt="completely hand-coded!">
+            <img src="responsive.png" alt="looks good on desktop and mobile! (hopefully)">
             <img src="nonazi.gif" alt="no nazi, no fascism, no racism">
             <img src="ab-trn.png" alt="trans rights Now!">
             <img src="anarchy1.gif" alt="anarchy Now!">
