added all words!

--- a/corridor.html
+++ b/corridor.html
@@ -53,7 +53,8 @@
         </style></head>
     <body><main>
         <p>You open the door into a corridor. <br>
-            You see doors on either side of the corridor. There is a marquee and 2 pinboards.
+            You see doors on either side of the corridor. There is a marquee, pinboards and
+            a shelf with zines.
             <br>You can faintly see a computer at the very end.
         </p>
         <div class="marquee">
