--- a/words/index.html
+++ b/words/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="../assets/blender.gif">
+        <link rel="icon" type="image/x-icon" href="../assets/words.png">
         <title>words</title><style>
             #texts a{width: fit-content;
                 font-weight: 650;
