--- a/words/jan.html
+++ b/words/jan.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="../assets/blender.gif">
+        <link rel="icon" type="image/x-icon" href="../assets/words.png">
         <title>words/jan</title><style>
         </style></head>
     <body><header><h1>jan</h1>
