--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -89,12 +89,13 @@
                     <li><b>jan Seli:</b> 28 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
-                    <li><b>waso Atu:</b> 4 changes</li>
+                    <li><b>waso Atu:</b> 5 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>10/8:<b> Ma Renamer pi Planet Mercury </b><span class="name">waso Atu</span></li><br>
             <li>9/8:<b> Kirby's Return to Ma Ante </b><span class="name">the motan</span></li><br>
             <li>8/8:<b> 𒈠 𒀭𒋼 𒉿 𒄿𒉿 𒀭𒋼 </b><span class="name">waso Atu</span></li><br>
             <li>3/8:<b> mante pijante </b><span class="name">the motan</span></li><br>
