--- a/basement/misc/wall.html
+++ b/basement/misc/wall.html
@@ -53,6 +53,7 @@
             <div>Nothing compared to the world.</div>
             <div>How do people care about me so much</div>
             <div>It feels cozy down here.</div>
+            <div>I don't know how many people have visited this site!</div>
             <div>just cant think it through we're stuck in a loop</div>
             <div>copium</div>
             <div>Thoughts are nice, calm and collected.</div>
