--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -85,7 +85,7 @@
                     <li><b>kulupu ko:</b> 150 changes</li>
                     <li><b>the motan:</b> 92 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 44 changes</li>
+                    <li><b>tabby:</b> 45 changes</li>
                     <li><b>jan Seli:</b> 28 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
@@ -95,6 +95,7 @@
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>11/8:<b> ma ante pi hippo ass </b><span class="name">tabby</span></li><br>
             <li>10/8:<b> Ma Renamer pi Planet Mercury </b><span class="name">waso Atu</span></li><br>
             <li>9/8:<b> Kirby's Return to Ma Ante </b><span class="name">the motan</span></li><br>
             <li>8/8:<b> 𒈠 𒀭𒋼 𒉿 𒄿𒉿 𒀭𒋼 </b><span class="name">waso Atu</span></li><br>
