--- a/basement/index.html
+++ b/basement/index.html
@@ -29,7 +29,7 @@
         </style></head>
     <body><main>
         <p>You walk down the stairs into the basement, lit up by cool white lights.
-            Hospital vibes. Once again you see doors, two of them, one of them
+            Hospital vibes. Once again you see doors, two of them, the last one
             with the words "staff only" scribbled over with sharpie.
         </p>
         <nav>
