--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -82,19 +82,23 @@
                 Also also the dates are based on my timezone, UTC -3<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 150 changes</li>
+                    <li><b>kulupu ko:</b> 153 changes</li>
                     <li><b>the motan:</b> 92 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 45 changes</li>
                     <li><b>jan Seli:</b> 28 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
+                    <li><b>waso Atu:</b> 6 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
-                    <li><b>waso Atu:</b> 5 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>14/8:<b> ma zip zap zop. theatre. temi we miss u </b><span class="name">kulupu ko</span></li><br>
+            <li>14/8:<b> ma zip zap zop </b><span class="name">kulupu ko</span></li><br>
+            <li>14/8:<b> ma seme pi ijo what </b><span class="name">waso Atu</span></li><br>
+            <li>12/8:<b> ma ante pi toki pona </b><span class="name">kulupu ko</span></li><br>
             <li>11/8:<b> ma ante pi hippo ass </b><span class="name">tabby</span></li><br>
             <li>10/8:<b> Ma Renamer pi Planet Mercury </b><span class="name">waso Atu</span></li><br>
             <li>9/8:<b> Kirby's Return to Ma Ante </b><span class="name">the motan</span></li><br>
