changes to racism tp text

--- a/words/racism.html
+++ b/words/racism.html
@@ -137,7 +137,7 @@
                 understand this: dark skin people aren't bad!
                 <br>they are people like you
                 <br>they can feel like you
-                <br>they can speak like you
+                <br>they can communicate like you
             </span>
 <br>
             <br>jan pi selo pimeja li lon tomo esun la
@@ -184,7 +184,7 @@
 <br>
             <br>tenpo ni la jan mute mute li toki uta e nasin ni
             <br>ken la tan li ni:
-            <br>ona li toki uta e nasin li la ona li pilin pi ike ala a!
+            <br>ona li toki uta e nasin ni la ona li pilin pi ike ala a!
             <br>jan ante li toki ike ala tawa ona
             <br>&emsp;&emsp;li wile ala pona e ona 
             <br><span class="en">
@@ -377,10 +377,12 @@
             <br>kulupu ni la nasin ike ni li lon
             <br>nasin ike ni li <i>kon</i> kulupu.
             <br>tomo kulupu ale pi toki mi li ike e lon pi jan pimeja ale 
+            <br>tan pi ike ni ale li nasin ike
             <br><span class="en">
                 this evil system exists in our community
                 <br>this evil system is the <i>soul</i>, a <i>backbone</i> of communities.
                 <br>all institutions i mentioned ruin all black people's lives
+                <br>the reason for these pains is the racist system
             </span>
 <br>
             <br>jan o <i>pini</i> e nasin ni 
