--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -88,13 +88,14 @@
                     <li><b>tabby:</b> 45 changes</li>
                     <li><b>jan Seli:</b> 28 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
-                    <li><b>waso Atu:</b> 6 changes</li>
+                    <li><b>waso Atu:</b> 7 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>19/8:<b> ma gambling pi ijo dangit </b><span class="name">waso Atu</span></li><br>
             <li>14/8:<b> ma zip zap zop. theatre. temi we miss u </b><span class="name">kulupu ko</span></li><br>
             <li>14/8:<b> ma zip zap zop </b><span class="name">kulupu ko</span></li><br>
             <li>14/8:<b> ma seme pi ijo what </b><span class="name">waso Atu</span></li><br>
