--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -44,7 +44,7 @@
         details{margin-top:0; border: solid 1px #f6abb6; width: fit-content;
         padding: 4px 10px; border-radius: 6px; height: fit-content}
         details p{margin: 0}
-        details[open]{background: linear-gradient(342deg, #5dcbfc 0%, #f6abb6 100%); 
+        details[open]{background: linear-gradient(in oklab 342deg, #5dcbfc, #f6abb6); 
             border-color: var(--back); height: auto}
         details:hover{background-color: #f6abb6}
         details:hover, details[open]{color: #080808; border-radius: 12px}
@@ -83,7 +83,7 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 153 changes</li>
-                    <li><b>the motan:</b> 92 changes</li>
+                    <li><b>the motan:</b> 93 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 45 changes</li>
                     <li><b>jan Seli:</b> 28 changes</li>
@@ -95,6 +95,7 @@
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>23/8:<b> ma ante pi ijo mante </b><span class="name">the motan</span></li><br>
             <li>19/8:<b> ma gambling pi ijo dangit </b><span class="name">waso Atu</span></li><br>
             <li>14/8:<b> ma zip zap zop. theatre. temi we miss u </b><span class="name">kulupu ko</span></li><br>
             <li>14/8:<b> ma zip zap zop </b><span class="name">kulupu ko</span></li><br>
