--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -82,19 +82,22 @@
                 Also also the dates are based on my timezone, UTC -3<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 153 changes</li>
+                    <li><b>kulupu ko:</b> 154 changes</li>
                     <li><b>the motan:</b> 93 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 45 changes</li>
                     <li><b>jan Seli:</b> 28 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
-                    <li><b>waso Atu:</b> 7 changes</li>
+                    <li><b>waso Atu:</b> 9 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>1/9:<b> 𐭌𐭀 𐭀𐭍𐭕𐭉 𐭐𐭉 𐭉𐭂𐭅 𐭀𐭍𐭕𐭉 </b><span class="name">waso Atu</span></li><br>
+            <li>1/9:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>1/9:<b> 𐭌𐭀 𐭀𐭍𐭕𐭉 𐭐𐭉 𐭉𐭂𐭅 𐭀𐭍𐭕𐭉 </b><span class="name">waso Atu</span></li><br>
             <li>23/8:<b> ma ante pi ijo mante </b><span class="name">the motan</span></li><br>
             <li>19/8:<b> ma gambling pi ijo dangit </b><span class="name">waso Atu</span></li><br>
             <li>14/8:<b> ma zip zap zop. theatre. temi we miss u </b><span class="name">kulupu ko</span></li><br>
