fixed link color in details

--- a/blender/index.html
+++ b/blender/index.html
@@ -23,6 +23,9 @@
                 color: var(--back);}
 
             #expos{display:block}
+
+            #info a{text-decoration-color: var(--text)}
+            #info a:hover{color: var(--color)}
         </style></head>
     <body><header><h1>blender</h1>
         <nav><a href="../corridor">↩ back</a></nav></header>
@@ -34,7 +37,7 @@
             <p>Hi! These are (most) of the things i've done in blender over the last while.
             The original files are 1920x1080 (bigger even than my own display lol), so 
             they're 400x225 to save your bandwidth at least a little bit.<br>
-            Also these images (and this site) are licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0!</a><br>
+            Also these images (and this site) are licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>!<br>
             Most of these series weren't made in one sitting, mostly over months of suddenly 
             wanting to do that one thing again.<br>
             You can see how many images each page has next to the link, so if your internet 
