--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -86,15 +86,17 @@
                     <li><b>the motan:</b> 93 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 45 changes</li>
-                    <li><b>jan Seli:</b> 28 changes</li>
+                    <li><b>jan Seli:</b> 29 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
-                    <li><b>waso Atu:</b> 9 changes</li>
+                    <li><b>waso Atu:</b> 10 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>29/09:<b> ma sigma meal pi skibidi slicers</b><span class="name">waso Atu</span></li><br>
+            <li>20/09:<b> other topics' other place </b><span class="name">jan Seli</span></li><br>
             <li>1/9:<b> 𐭌𐭀 𐭀𐭍𐭕𐭉 𐭐𐭉 𐭉𐭂𐭅 𐭀𐭍𐭕𐭉 </b><span class="name">waso Atu</span></li><br>
             <li>1/9:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
             <li>1/9:<b> 𐭌𐭀 𐭀𐭍𐭕𐭉 𐭐𐭉 𐭉𐭂𐭅 𐭀𐭍𐭕𐭉 </b><span class="name">waso Atu</span></li><br>
